hphp/hack/test/typecheck/const_visibility_modifiers/const_access_abstract.php.exp
File "const_access_abstract.php", line 13, characters 15-22:
Cannot access this protected member, you don't extend A (Typing[4112])
File "const_access_abstract.php", line 4, characters 19-21:
This member is protected
